# Europe-travel

./: .gitattributes  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: package.json
artifacts/api-server/data/: gmap_page_map.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: index.ts  pdf.ts
artifacts/langchain-rag/: requirements.txt  starter.py
artifacts/langchain-rag/pages/: 1_PDF_압축.py
artifacts/pdf-chatbot/: index.html  package.json
artifacts/pdf-chatbot/.replit-artifact/: artifact.toml
artifacts/pdf-chatbot/src/: index.css
artifacts/pdf-chatbot/src/components/: ChatInterface.tsx  PdfUploader.tsx
artifacts/pdf-chatbot/src/pages/: home.tsx
lib/api-spec/: openapi.yaml
