[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langchain-opentutorial>=0.0.9",
    "langchain-teddynote>=0.5.4",
    "langchain-text-splitters>=1.1.1",
    "nbconvert>=7.17.0",
    "numpy>=2.4.3",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]
